<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray"
    >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn"
        android:layout_width="346dp"
        android:layout_height="207dp"
        android:background="@drawable/round_start_btn"
        android:fontFamily="@font/quicksandbold"
        android:padding="10dp"
        android:paddingLeft="3dp"

        android:text="@string/meditateText"
        android:textColor="@color/darkBlue"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/timeLeft"
        android:layout_width="77dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="10:00"
        android:fontFamily="@font/quicksandlight"

        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_btn" />

    <EditText
        android:id="@+id/editCountdown"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="Minutes"
        android:fontFamily="@font/quicksandlight"

        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timeLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <Button
        android:id="@+id/setMinutes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightDarkBlue"
        android:inputType="number"
        android:fontFamily="@font/quicksandbold"

        android:maxLength="3"
        android:text="Set"
        android:textColor="@color/sand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/reset_btn"
        app:layout_constraintTop_toBottomOf="@+id/editCountdown"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/calmBlue"
        android:text="Reset"
        android:fontFamily="@font/quicksandbold"

        android:textColor="@color/darkOrange"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/historyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLeft"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible"></Button>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksandlight"
        android:text="@string/welcome_name"

        android:textColor="@color/blue"
        android:textSize="40sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/settings_btn_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:textSize="15sp"
        android:text="@string/your_history"
        android:fontFamily="@font/quicksandbold"

        app:backgroundTint="@color/lightDarkBlue"
        app:layout_constraintBottom_toTopOf="@+id/settingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:textColor="@color/sand"/>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="344dp"

        android:layout_height="67dp"
        android:fontFamily="@font/quicksandlight"
        android:text=""
        android:textColor="@color/darkBlue"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

